--- a/frontend/AssignParty.html
+++ b/frontend/AssignParty.html
@@ -82,7 +82,18 @@
       </div>
 
     </div>
+    <div class="conform"><span class="message" id="assign">New Assign Party Successfully</span></div>
     <br>
+    <!-- model  -->
+
+    <div class="modalPopup">
+      <div class="modal-contentPopup">
+        <!-- <span class="close-buttonPopup">×</span> -->
+        <div id="delMessage">"Are you sure you want to delete?"</div><br>
+        <div class="conformation" id="conformation">
+        </div>
+      </div>
+    </div>
     <div class="AssignList">
       <table class="table">
         <thead class="table-light">
