--- a/frontend/GenerateInvoice.html
+++ b/frontend/GenerateInvoice.html
@@ -316,6 +316,7 @@
 	</style>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.js"></script>
 	<script defer type="text/javascript" src="GeneratedInvoice.js"></script>
+	<script defer type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
