--- a/frontend/Product.html
+++ b/frontend/Product.html
@@ -15,7 +15,6 @@
     h4 {
       margin-left: 10px;
     }
-
     #model-content {
       position: fixed;
     }
@@ -72,7 +71,19 @@
       </div>
     </div>
 
+    <div class="conform"><span class="message" id="product">New Product Created Successfully</span></div>
     <br>
+    <!-- model  -->
+
+    <div class="modalPopup">
+      <div class="modal-contentPopup">
+        <!-- <span class="close-buttonPopup">×</span> -->
+        <div id="delMessage">"Are you sure you want to delete?"</div><br>
+        <div class="conformation" id="conformation">
+        </div>
+      </div>
+    </div>
+    
     <div class="ProductList">
       <table class="table">
         <thead class="table-light">
