--- a/frontend/ProductRate.html
+++ b/frontend/ProductRate.html
@@ -87,7 +87,18 @@
                     style="margin-left: 10px;">Create</button>
             </div>
         </div>
-        <br>
+        <div class="conform"><span class="message" id="productRate">New Party Rate Created Successfully</span></div>
+        <br><!-- model  -->
+
+        <div class="modalPopup">
+          <div class="modal-contentPopup">
+            <!-- <span class="close-buttonPopup">×</span> -->
+            <div id="delMessage">"Are you sure you want to delete?"</div><br>
+            <div class="conformation" id="conformation">
+            </div>
+          </div>
+        </div>
+        
         <div class="AssignList">
             <table class="table">
                 <thead class="table-light">
@@ -95,7 +106,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Product Name</th>
                         <th scope="col">Rate</th>
-                        <th scope="col">DateTime</th>
+                        <th scope="col">Date</th>
                         <th scope="col">Edit</th>
                         <th scope="col">Delete</th>
                     </tr>
