--- a/frontend/Invoice.html
+++ b/frontend/Invoice.html
@@ -73,6 +73,7 @@
     #pagination {
       float: right;
     }
+
   </style>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
   <script defer type="text/javascript" src="script.js"></script>
@@ -157,6 +158,7 @@
       </div>
     </div>
 
+    <div class="conform"><span class="message" id="invoice">New Invoice Created Successfully</span></div><br>
     <div class="AssignList">
       <table class="table" id="bodyList">
         <thead class="table-light">
@@ -176,8 +178,11 @@
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
+
+      <!-- model  -->
       <div class="modal-dialog" role="document">
         <div class="modal-content" id="model-content">
+
           <div class="modal-header">
             <h3 class="modal-title" id="People-name">Edit</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -228,8 +233,10 @@
                   </div>
                 </div>
               </div>
+
               <!-- pagination -->
-              <label>Show <select name="InvoiceProduct_length" aria-controls="InvoiceProduct" class="" id="Size" onchange="changeSize()">
+              <label>Show <select name="InvoiceProduct_length" aria-controls="InvoiceProduct" class="" id="Size"
+                  onchange="changeSize()">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="5">5</option>
@@ -289,7 +296,7 @@
                     <th scope="col">Rate Of Product</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">Date</th>
-                    <th scope="col" id="total">Total</th>
+                    <th scope="col">Total</th>
                     <!-- <th scope="col">Edit</th> -->
                     <th scope="col">Delete</th>
                   </tr>
