--- a/frontend/Invoice.html
+++ b/frontend/Invoice.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+   
   <link rel="stylesheet" type="text/css" href="style.css">
   <script defer src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
 
@@ -82,17 +84,16 @@
 
 <body>
   <div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 3em;">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Party</a>
+              <a class="nav-link Active" aria-current="page" href="index.html">Party</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Product.html">Product</a>
@@ -104,15 +105,14 @@
               <a class="nav-link" href="ProductRate.html">Product Rate</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link Active" href="#">Invoice</a>
+              <a class="nav-link" href="#">Invoice</a>
             </li>
           </ul>
+          <span class="d-flex" id="logout">
+            <!-- <a class="nav-link  btn-outline-success" href="#" id="logout">Logout</a> -->
+            <button class="btn btn-outline-danger" onclick="Logout()">Logout</button>
+          </span>
         </div>
-        <span class="d-flex" id="logout">
-          <!-- <a class="nav-link  btn-outline-success" href="#" id="logout">Logout</a> -->
-          <button class="btn btn-outline-danger" onclick="Logout()">Logout</button>
-        </span>
-
       </div>
     </nav>
 
@@ -163,7 +163,7 @@
         </div>
       </div>
     </div>
-
+    <div class="conform"><span class="message" id="invoice">New Invoice Created Successfully</span></div><br>
     <div class="row g-3 align-items-center">
       <div class="col-auto">
         <b><label class="col-form-label setFont">Start Date</label></b>
@@ -178,11 +178,10 @@
       <input type="date" placeholder="Date" style=" margin-left: 10px;" id="EndDate" />
   </div>
   <div class="col-auto" style="margin-left: -5px;">
-    <button class="btn btn-outline-success" onclick="RangeInvoice()">Range</button>
+    <button class="btn btn-outline-success" onclick="RangeInvoice()">Search In Range</button>
   </div>
     </div>
-    
-    <div class="conform"><span class="message" id="invoice">New Invoice Created Successfully</span></div><br>
+    <br>
     <div class="AssignList">
       <table class="table" id="invoiceList">
         <thead class="table-light">
@@ -357,56 +356,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"></script>
 
   <script type="text/javascript" src="Invoice.js"></script>
   <script defer type="text/javascript" src="Dropdown.js"></script>
-  <script>
-    // $(document).ready(function () {
-
-    //   var xmlhttp = new XMLHttpRequest();
-    //   xmlhttp.open("GET", "https://localhost:44357/api/invoices", true);
-    //   xmlhttp.onreadystatechange = function () {
-
-    //     if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-    //       var persons = JSON.parse(xmlhttp.responseText);
-    //       $("#bodyList").DataTable({
-    //         data: persons,
-
-    //         "columns": [
-    //           { "data": "Id" },
-    //           { "data": "PartyName" },
-    //           { "data": "DateOfInvoice"},
-    //           { "data": "total" },
-    //           {
-    //             "title": "Edit",
-    //             render: function (data, type, full) {
-    //               return `<td>
-    //             <button id="${full.id}" class=" btn btn-outline-primary" onclick="edit(this.id)">Edit</button>
-    //         </td>`}
-    //           },
-    //           {
-    //             "title": "Details",
-    //             render: function (data, type, full) {
-    //               return `
-    //         <td><button class="btn btn-outline-secondary" id="${full.id}" onclick="view(this.id)">View</button>
-    //             </td>`}
-    //           }
-    //         ],
-
-    //       });
-    //     }
-    //     if (xmlhttp.status == 401) {
-    //       window.location.href = "/Register.html"
-    //     }
-
-    //   }
-    //   xmlhttp.send();
-    // })
-
-  </script>
 </body>
 
 </html>
