--- a/frontend/ProductRate.html
+++ b/frontend/ProductRate.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+     
     <link rel="stylesheet" type="text/css" href="style.css">
     <script defer type="text/javascript" src="ProductRate.js"></script>
     <script defer type="text/javascript" src="script.js"></script>
@@ -24,40 +26,37 @@
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 3em;">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Party</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Product.html">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="AssignParty.html">Assign Party</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link Active" href="#">Product Rate</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Invoice.html">Invoice</a>
-                        </li>
-
-                    </ul>
-                </div>
+              <a class="navbar-brand" href="index.html">Home</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">Party</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Product.html">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="AssignParty.html">Assign Party</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link Active" href="#">Product Rate</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="Invoice.html">Invoice</a>
+                  </li>
+                </ul>
                 <span class="d-flex" id="logout">
-                    <!-- <a class="nav-link  btn-outline-success" href="#" id="logout">Logout</a> -->
-                    <button class="btn btn-outline-danger" onclick="Logout()">Logout</button>
+                  <!-- <a class="nav-link  btn-outline-success" href="#" id="logout">Logout</a> -->
+                  <button class="btn btn-outline-danger" onclick="Logout()">Logout</button>
                 </span>
+              </div>
             </div>
-        </nav>
+          </nav>
 
         <div class="create" style="padding: 5px 5px 10px 5px ;">
             <br>
@@ -98,7 +97,7 @@
             </div>
           </div>
         </div>
-        
+
         <div class="AssignList">
             <table class="table">
                 <thead class="table-light">
