--- a/frontend/Invoice.html
+++ b/frontend/Invoice.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-   
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
   <link rel="stylesheet" type="text/css" href="style.css">
   <script defer src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
 
@@ -76,6 +80,9 @@
       float: right;
     }
 
+    #bodyList tr:first-child {
+      display: none;
+    }
   </style>
   <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
   <script defer type="text/javascript" src="script.js"></script>
@@ -87,7 +94,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -154,10 +162,10 @@
         </div>
         <div class="col-auto">
           <b><label class="col-form-label setFont">Date</label></b>
-      </div>
-      <div class="col-auto" style="margin-left: -15px;">
+        </div>
+        <div class="col-auto" style="margin-left: -15px;">
           <input type="date" placeholder="Date" style=" margin-left: 10px;" id="date" />
-      </div>
+        </div>
         <div class="col-auto" style="margin-left: -5px;">
           <button class="btn btn-outline-success" onclick="createInvoice()">Create</button>
         </div>
@@ -167,19 +175,19 @@
     <div class="row g-3 align-items-center">
       <div class="col-auto">
         <b><label class="col-form-label setFont">Start Date</label></b>
-    </div>
-    <div class="col-auto" style="margin-left: -15px;">
+      </div>
+      <div class="col-auto" style="margin-left: -15px;">
         <input type="date" placeholder="Date" style=" margin-left: 10px;" id="StartDate" />
-    </div>
-    <div class="col-auto">
-      <b><label class="col-form-label setFont">End Date</label></b>
-  </div>
-  <div class="col-auto" style="margin-left: -15px;">
-      <input type="date" placeholder="Date" style=" margin-left: 10px;" id="EndDate" />
-  </div>
-  <div class="col-auto" style="margin-left: -5px;">
-    <button class="btn btn-outline-success" onclick="RangeInvoice()">Search In Range</button>
-  </div>
+      </div>
+      <div class="col-auto">
+        <b><label class="col-form-label setFont">End Date</label></b>
+      </div>
+      <div class="col-auto" style="margin-left: -15px;">
+        <input type="date" placeholder="Date" style=" margin-left: 10px;" id="EndDate" />
+      </div>
+      <div class="col-auto" style="margin-left: -5px;">
+        <button class="btn btn-outline-success" onclick="RangeInvoice()">Search In Range</button>
+      </div>
     </div>
     <br>
     <div class="AssignList">
@@ -195,7 +203,7 @@
           </tr>
         </thead>
         <tbody id="bodyList">
-        
+
         </tbody>
       </table>
     </div>
@@ -298,11 +306,12 @@
                 const headerss = new Headers();
                 headerss.append('Authorization', `Bearer ${localStorage.getItem('tokenName')}`);
                 headerss.append('Content-Type', 'application/json');
-
                 fetch("https://localhost:44357/api/Products", {
                   method: 'GET', // or 'POST', 'PUT', etc.
                   headers: headerss,
                 }).then(res => res.json()).then(data => {
+                  console.log("----------")
+                  console.log(data)
                   for (let i = 0; i < data.length; i++) {
                     var html = `<option>${data[i].productName}</option>`
                     document.getElementById('field2').insertAdjacentHTML("beforeend", html);
