--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -1,12 +1,24 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head runat="server">
     <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="Register.js"></script>
+    <style>
+        #userAvailable {
+            color: red;
+            margin-left: 2.5em;
+            display: none;
+        }
+    </style>
+  
 </head>
+
 <body>
     <section class="vh-100" style="background-color: #eee;">
         <div class="container h-100">
@@ -18,7 +30,7 @@
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
-
+                                    <div id="userAvailable">User Is Already Exist Please Login !!</div>
                                     <form class="mx-1 mx-md-4" action="Register.js" method="Post" id="RegisterUser">
 
                                         <div class="d-flex flex-row align-items-center mb-4">
@@ -31,7 +43,8 @@
                                             <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="form3Example3c">Enter Your Email</label>
-                                                <input class="form-control" for="validationCustom03" id="userEmail" type="email" required/>
+                                                <input class="form-control" for="validationCustom03" id="userEmail"
+                                                    type="email" required />
 
                                             </div>
                                         </div>
@@ -40,20 +53,24 @@
                                             <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label class="form-label" for="form3Example4c">Password</label>
-                                                <input class="form-control" for="validationCustom03" id="password" type="password" required/>
+                                                <input class="form-control" for="validationCustom03" id="password"
+                                                    type="password" required />
                                             </div>
                                         </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                                                <input class="form-control" for="validationCustom03" id="repeatpassword" type="password" required/>
+                                                <label class="form-label" for="form3Example4cd">Repeat your
+                                                    password</label>
+                                                <input class="form-control" for="validationCustom03" id="repeatpassword"
+                                                    type="password" required />
                                             </div>
                                         </div>
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <Button ID="register" Text="Register" class="btn btn-primary btn-lg">Register</Button>
+                                            <Button ID="register" Text="Register"
+                                                class="btn btn-primary btn-lg">Register</Button>
                                             <br />
                                             <br />
 
@@ -77,5 +94,14 @@
             </div>
         </div>
     </section>
+
+    <script>
+        console.log("user available")
+              if(sessionStorage.getItem("IsUserAvailable") != null){
+        document.getElementById('userAvailable').style.display='block'
+        sessionStorage.removeItem("IsUserAvailable")
+      }
+          </script>
 </body>
+
 </html>
