--- a/frontend/Register.html
+++ b/frontend/Register.html
@@ -31,7 +31,7 @@
 
                                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
                                     <div id="userAvailable">User Is Already Exist Please Login !!</div>
-                                    <form class="mx-1 mx-md-4" action="Register.js" method="Post" id="RegisterUser">
+                                    <form class="mx-1 mx-md-4 needs-validation" action="Register.js" method="Post" id="RegisterUser">
 
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
